# hpc

./: .gitmodules  README.md
1/: CMakeLists.txt  Makefile  README.md  gemm_test.f90  matrix.c  matrix.f90  matrix.h
1/c_src/: matrix.c  matrix.h
1/f_src/: gemm_test.f90  gemm_test_c.f90
1/py_src/: mul_matrix.cc  run_matrix.py
1/report/: .~lock.report.odt#  report.odt
1/src/: gemm_matrix.f90  gemm_test.f90  matrix.c  matrix.cc  matrix.h  run_matrix.py
